remove code that was moved to common project